Page MenuHome GnuPG

Windows: gnupg_exec_tool_stream with INEXTRA
Closed, ResolvedPublic

Description

On Windows the feature of INEXTRA doesn't work because it needs handling of inherited HANDLEs from parent process.
In gnupg master, inherited HANDLE is supported, so, it will be possible to support the feature correctly.

This will improve the cases:

  • wks-client / wks-server (verify_signature function invoking gpg with INEXTRA, in wks-receive.c)
  • dirmngr for SWDB

Revisions and Commits